--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "php": "^8.2",
         "astrotomic/laravel-translatable": "^11.15",
         "laravel/framework": "^11.9",
-        "laravel/sanctum": "^4.0",
-        "laravel/socialite": "^5.16",
+        "laravel/sanctum": "*",
+        "laravel/socialite": "*",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
